--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,7 +8,10 @@
     <link rel="icon" href="~@altshiftab/styles/favicon.svg" sizes="any" type="image/svg+xml"/>
 </head>
 <body>
-    <header><altshift-header-www></altshift-header-www></header>
+    <header>
+        <altshift-header-www></altshift-header-www>
+        <div class="theme-toggler-container"></div>
+    </header>
     <main></main>
     <footer><altshift-footer-www></altshift-footer-www></footer>
 </body>
