Fix WebKit page loading bug

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
     <title>Alt-Shift</title>
     <link rel="icon" href="~@altshiftab/styles/favicon.svg" sizes="any" type="image/svg+xml"/>
 </head>
-<body>
+<body class="loading">
     <header>
         <altshift-header-www></altshift-header-www>
         <div class="theme-toggler-container"></div>
